footer and Links

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
                         <img src="src/img/photo6.png" alt="">
                         <p class="area">Product Owner</p>
                         <p class="name">Stan John</p>
-                    </div>
-                    
+                    </div>   
         </div>
     </div>
+    <footer>
+        <p>Damian Almada - Web Developer - <span><a href="https://damianar.herokuapp.com/index.html"> Portafolio</a></span> - Damiianalmada06@gmail.com</p>
+    </footer>
 </body>
 </html>
